// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asterisk.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
*123*

=====================================output=====================================
*123*

================================================================================
`;

exports[`complex.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
**Do you want to request a *feature* or report a *bug*?**

*bug*?

=====================================output=====================================
**Do you want to request a *feature* or report a *bug*?**

*bug*?

================================================================================
`;

exports[`special.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
0*1*2

!*1*2

0*1*!

!*1*!

0*1*2

！*1*2

0*1*！

！*1*！

0_1_2

!_1_2

0_1_! <!-- remark-misparsing, should be formatted as \`0_1\\_!\` -->

!_1_!

0_1_2

！_1_2

0_1_！ <!-- remark-misparsing, should be formatted as \`0_1\\_！\` -->

！_1_！

=====================================output=====================================
0*1*2

!*1*2

0*1*!

!*1*!

0*1*2

！*1*2

0*1*！

！*1*！

0_1_2

!\\_1_2

0*1*! <!-- remark-misparsing, should be formatted as \`0_1\\_!\` -->

!*1*!

0_1_2

！\\_1_2

0*1*！ <!-- remark-misparsing, should be formatted as \`0_1\\_！\` -->

！*1*！

================================================================================
`;

exports[`underscore.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
_123_

=====================================output=====================================
*123*

================================================================================
`;
